fix: Correct alignment of cards icons

--- a/frontend/src/stylesheets/Question.scss
+++ b/frontend/src/stylesheets/Question.scss
@@ -26,6 +26,8 @@
       & > * {
         padding: 10px 15px;
         font-size: 16px;
+        flex-basis: 10%;
+        text-align: center;
       }
 
       .difficulty {
